# GammaMC

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Settings.ini  SimTestRun  SimTestRun.cc
GEvent/: CMakeLists.txt  GEvent.cc  GEvent.h
GEventsFile/: GEventsFile.h
GGeometry/: CMakeLists.txt  GCuboid.cc  GCuboid.h  GGeometryStruct.h  GGeometryTest.cc  GPoint.h  GVector.h
GMaterial/: CMakeLists.txt  GMaterial.cc  GMaterial.h
GPoint/: CMakeLists.txt  GPoint.cc  GPoint.h  GPointTest.cc
GRand/: CMakeLists.txt  GNoise.h  GRand.h
GSimProcess/: CMakeLists.txt  GSimProcess.cc  GSimProcess.h
GSource/: CMakeLists.txt  GSource.cc  GSource.h
GSpectra/: CMakeLists.txt  DrawSpec.py  GSpectra.cc  GSpectra.h  GSpectraTest.cc
